@@ -8,6 +8,7 @@ documents those changes that are of interest to users and administrators.
  -- Rewrite srun's logic for pending steps for better efficiency (fewer RPCs).
  -- Added new SchedulerParameters options step_retry_count and step_retry_time
     to control scheduling behaviour of job steps waiting for resources.
+ -- Optimize resource allocation logic for --spread-job job option.
 
 * Changes in Slurm 17.02.0pre2
 ==============================
